project-1/crawler-kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crawlers
  labels:
    istio-injection: enabled
    name: crawlers
